# sw360python

./: .buildinfo  .editorconfig  .flake8  .gitignore  .markdownlint.yaml  AGENTS.md  ChangeLog.md  Contributing.md  CreateCoverageReport.ps1  License.md  Readme.md  RunChecks.ps1  check_project.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/: copilot-instructions.md
.github/workflows/: deploy-documentation.yml  python-package.yml  static-checks.yml  unit-test.yml  unit-tests.yml
.reuse/: dep5
SBOM/: sbom.cdx.json
_sources/: index.rst.txt
docs/: conf.py  index.rst
docs-source/: conf.py
stubs/: responses.pyi
sw360/: .editorconfig  __init__.py  attachments.py  base.py  clearing.py  components.py  license.py  moderationrequests.py  packages.py  project.py  releases.py  sw360_api.py  sw360_objects.py  sw360error.py  sw360keycloak.py  sw360oauth2.py  vendor.py  vulnerabilities.py
tests/: __init__.py  test_sw360_attachments.py  test_sw360_base.py  test_sw360_clearingrequests.py  test_sw360_components.py  test_sw360_health.py  test_sw360_keycloak.py  test_sw360_licenses.py  test_sw360_moderationrequests.py  test_sw360_oauth2.py  test_sw360_packages.py  test_sw360_projects.py  test_sw360_releases.py  test_sw360_support.py  test_sw360_vendors.py  test_sw360_vulnerabilities.py  test_sw360obj_base.py  test_sw360obj_component.py  test_sw360obj_project.py  test_sw360obj_release.py
